# Ouija-Pad

./: .gitignore  LICENSE  README.md  ouija-pad.desktop  package-lock.json  package.json
.github/workflows/: build-release.yml
src/: README.md  index.html  script.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
